Final project for week06
